Use memoisation to avoid unnecessary computation of repeated cave routes